--- a/underscore.mdx
+++ b/underscore.mdx
@@ -154,4 +154,5 @@ combination with underscore references to transform features:
 * [`json_value`](/api-docs#json_value)
 * [`md5`](/api-docs#md5)
 * [`string_to_bytes`](/api-docs#string_to_bytes)
+* [`total_seconds`](/api-docs#total_seconds)
 
