--- a/security.mdx
+++ b/security.mdx
@@ -49,8 +49,8 @@ policies, updated at a minimum on an annual basis, to enforce best
 practices across access control, risk management, change management,
 incident response, and other critical areas.
 We align our policies with standard industry frameworks and
-our controls are certified via a SOC-2 Type 2 assessment.
-You can request a copy of our certified report by contacting
+our controls are certified via a SOC-2 Type 2 and ISO27001 assessment.
+You can request a copy of our certified reports by contacting
 [security@chalk.ai](mailto:security@chalk.ai).
 
 ### Our People
