replace private link

--- a/setup-guide.mdx
+++ b/setup-guide.mdx
@@ -159,7 +159,7 @@ multiple people to work concurrently in one environment, and also enables more p
 
 Once you have deployed your code, then you can query your features directly from the command line using the
 [`chalk query`](/cli/query) command, or by calling one of our Chalk Clients in code.
-Chalk has a [Python client](https://github.com/chalk-ai/chalk), [Go client](https://github.com/chalk-ai/chalk-go),
+Chalk has a [Python client](https://pypi.org/project/chalkpy/), [Go client](https://github.com/chalk-ai/chalk-go),
 [Java client](https://github.com/chalk-ai/chalk-java), and a [Typescript client](https://github.com/chalk-ai/chalk-ts).
 
 This is the primary workflow for iterating on features and resolvers! Write, deploy, and query to verify whether the
