fix changelog image

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -57,7 +57,7 @@ Customers running the gRPC server can now reach out to enable feature value metr
 the number of observations, number of unique values, and percentage of null values over all queries, as well as the
 running average and maximum of features observed. Please reach out if you'd like to enable feature value metrics.
 
-[Feature value metrics](/img/feature_value_metrics.png)
+![Feature value metrics](/img/feature_value_metrics.png)
 
 Additionally, the feature table in the dashboard has been updated to allow for customization of columns displayed,
 which enables viewing request counts over multiple time ranges in the same view.
