one more changelog fix

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -36,7 +36,7 @@ for AWS deployments or [Compute Engine Machine Families](https://cloud.google.co
 for GCP deployments. If you have any questions about how to use any of these settings in the configuration page, 
 please reach out to the team.
 
-![Cloud Resource Configurations Advanced Settings](/img/cloud_resource_configuration_advanced_10_2024)
+![Cloud Resource Configurations Advanced Settings](/img/cloud_resource_configuration_advanced_10_2024.png)
 
 ## October 7, 2024
 
