fix grpc specification

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -11,7 +11,7 @@ description: Updates to Chalk!
 
 ### SQL explorer in dashboard for datasets
 
-Customers running the gRPC server can now run SQL queries on [dataset](https://docs.chalk.ai/docs/datasets) outputs 
+Customers can now run SQL queries on [dataset](https://docs.chalk.ai/docs/datasets) outputs 
 in the dashboard. To use this feature, navigate to the `Datasets` page in the menu, select a dataset,
 and click on the `Output Explorer` tab.
 
